<resources>
    <string name="app_name">LowLevelProgrammer</string>
    <string name="app_full_name">Who Wants to Become\na Low Level Programmer</string>
    <string name="local_game_rus">Локальная игра</string>
    <string name="multip_game_rus">Сетевая игра</string>
    <string name="start_rus">Начать игру!</string>
    <string name="win_rus">Вы победили!</string>
    <string name="failure_rus">Вы проиграли!</string>
    <string name="submit_rus">Подтвердить</string>
    <string name="win_home_rus">Сыграть еще!</string>
    <string name="failed_home_rus">Попробовать снова!</string>
    <string name="time_over_rus">Время вышло :(</string>
    <string name="prog_btn_1">₿ 34000</string>
    <string name="prog_btn_2">₿ 24000</string>
    <string name="prog_btn_3">₿ 19000</string>
    <string name="prog_btn_4">₿ 14000</string>
    <string name="prog_btn_5">₿ 9000</string>
    <string name="prog_btn_6">₿ 7000</string>
    <string name="prog_btn_7">₿ 5000</string>
    <string name="prog_btn_8">₿ 3000</string>
    <string name="prog_btn_9">₿ 2000</string>
    <string name="prog_btn_10">₿ 1000</string>
    <string name="the_next_question_rus">Следующий вопрос появится через:</string>
    <string name="fifty_fifty_description">Fifty-fifty help</string>
    <string name="contact_friend_description">Contact friend for help</string>
    <string name="user_name_rus">\tИмя Пользователя</string>
    <string name="pass_rus">\tПароль</string>
    <string name="email">\tE-mail</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="modes_rus">Игры</string>
    <string name="ranking_rus">Рейтинг</string>
    <string name="desc_home_multiplayer_image">Home Multiplayer Image</string>
    <string name="question_signs">"???"</string>
    <string name="score_simple_rus">Ваш счет:</string>
    <string name="name_rus">\tИмя</string>
    <string name="score_rus">Счет</string>
    <string name="mode_name_rus">\tИгровой режим</string>
    <string name="answer_rus">Ответ</string>
    <string name="sound_button_description">Turning sound off and on</string>
</resources>
