<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/simple_play_mode"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradients_anim"
    tools:context=".SimpleMode">

    <LinearLayout
        android:id="@+id/simpleLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="top"
        android:orientation="vertical"
        android:weightSum="100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/simple_linear_2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="15"
            android:orientation="horizontal"
            android:weightSum="100"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/reward_simple"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="25"
                android:text="TextView"
                android:textColor="@color/transparentLightBlue"
                android:textSize="24sp"
                app:fontFamily="@font/rex_bold_inline"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.011" />

            <ImageButton
                android:id="@+id/simple_fifty_help"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="15"
                android:background="@drawable/verysmall5050"
                android:clickable="true"
                android:contentDescription="@string/fifty_fifty_description"
                android:focusable="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.757"
                app:layout_constraintStart_toStartOf="@+id/linearLayout"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.036" />

            <ImageButton
                android:id="@+id/simple_call_help"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="15"
                android:background="@drawable/callveysmall"
                android:clickable="true"
                android:contentDescription="@string/contact_friend_description"
                android:focusable="true"
                app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
                app:layout_constraintEnd_toStartOf="@+id/btn_fifty_help"
                app:layout_constraintHorizontal_bias="0.977"
                app:layout_constraintStart_toStartOf="@+id/linearLayout"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.012" />

            <ImageButton
                android:id="@+id/btn_audience_help_simple"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="25"
                android:background="@drawable/cats_very_small"
                android:clickable="true"
                android:contentDescription="@string/contact_friend_description"
                android:focusable="true"
                app:layout_constraintBottom_toBottomOf="@+id/simpleLinearLayout"
                app:layout_constraintEnd_toStartOf="@+id/btn_call_help"
                app:layout_constraintHorizontal_bias="0.977"
                app:layout_constraintStart_toStartOf="@+id/simpleLinearLayout"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.012" />

            <TextView
                android:id="@+id/simple_mode_counter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="15"
                android:gravity="end"
                android:text="TextView"
                android:textColor="@color/transparentLightBlue"
                android:textSize="20sp"
                app:fontFamily="@font/rex_bold_inline"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.976"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.039" />

        </LinearLayout>

        <TextView
            android:id="@+id/simple_question"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="15"
            android:gravity="center_horizontal"
            android:textColor="@color/textColor"
            android:textSize="21sp"
            app:fontFamily="@font/rex_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.087" />


        <RadioGroup
            android:id="@+id/simple_radioGroup"
            android:layout_width="200dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="55">

            <RadioButton
                android:id="@+id/simple_option_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_box"
                android:backgroundTint="@color/buttons"
                android:gravity="center_horizontal"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp"
                android:textColor="@color/textColor"
                app:fontFamily="@font/rex_bold" />

            <RadioButton
                android:id="@+id/simple_option_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_box"
                android:backgroundTint="@color/buttons"
                android:gravity="center_horizontal"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp"
                android:textColor="@color/textColor"
                app:fontFamily="@font/rex_bold" />

            <RadioButton
                android:id="@+id/simple_option_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_box"
                android:backgroundTint="@color/buttons"
                android:gravity="center_horizontal"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp"
                android:textColor="@color/textColor"
                app:fontFamily="@font/rex_bold" />

            <RadioButton
                android:id="@+id/simple_option_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_box"
                android:backgroundTint="@color/buttons"
                android:gravity="center_horizontal"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp"
                android:textColor="@color/textColor"
                app:fontFamily="@font/rex_bold" />

        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/submit_simple_mode"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="bottom"
            android:layout_margin="25dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="68dp"
            android:layout_weight="10"
            android:backgroundTint="@color/buttons"
            android:onClick="btnPressed"
            android:text="@string/submit_rus"
            android:textColor="@color/textColor"
            android:textSize="30sp"
            app:cornerRadius="0dp"
            app:fontFamily="@font/rex_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.555"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:rippleColor="#33AAAAAA"
            app:strokeColor="@color/darkBlue"
            app:strokeWidth="1.5dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>